--- a/src/windows/leash/htmlhelp/html/Get_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Get_Tickets.htm
@@ -8,7 +8,7 @@
 <BODY>
 <H1>Get Tickets</H1>
 <p>
-Before you can access services that use Kerberos for security, you must obtain a Kerberos ticket. If your company uses RSA SecurID to control access to Kerberos, you will be prompted to enter your SecurID password after you request a ticket.</p>
+Before you can access services that use Kerberos for authentication, you must obtain a Kerberos ticket. If your company uses RSA SecurID to control access to Kerberos, you will be prompted to enter your SecurID password after you request a ticket.</p>
 <p>
 To get a ticket:
 <ol>
@@ -41,7 +41,7 @@ Your new ticket is listed in the main window.
 <H2>Related Help</H2>
 <ul id="helpul">
 <li><a href="HTML/Tickets.htm">About tickets</a></li>
-<li><a href="HTML/Ticket_Settings.htm">Ticket settings</a></li>
+<li><a href="HTML/Ticket_Settings.htm">Ticket settings and flags</a></li>
 <li><a href="HTML/Import_Tickets.htm">Import tickets</a></li>
 </ul>
 <SCRIPT Language=JavaScript> 
