--- a/src/windows/leash/htmlhelp/html/KVNO.htm
+++ b/src/windows/leash/htmlhelp/html/KVNO.htm
@@ -65,7 +65,7 @@
 </tr>
 <tr>
 <th id="th2"><span class="command"><strong>-S</strong> <em>sname</em></span></th>
-<td> Specifies that the <em>service1 service2</em> ... arguments are interpreted as hostnames, and the service principals are to be constructed from those hostnames and the service name sname. The service hostnames will be canonicalized according to the usual rules for constructing service principals.
+<td> Specifies that the <em>service1 service2</em> ... arguments are interpreted as hostnames, and the service principals are to be constructed from those hostnames and the service name <em>sname</em>. The service hostnames will be canonicalized according to the usual rules for constructing service principals.
 </td>
 </tr>
 <tr>
