--- a/src/windows/leash/htmlhelp/html/Make_Default.htm
+++ b/src/windows/leash/htmlhelp/html/Make_Default.htm
@@ -20,6 +20,11 @@ If you have only one principal, that principal is automatically the default.</p>
 <p>
 The default principal appears in bold font in the main window.</p>
 
+<h3>Related help</h3>
+<ul id="helpul">
+<li><a href="HTML/Principals.htm">About principals</a></li>
+<li><a href="HTML/Manage_Multiple_Principals.htm">Manage multiple principals</a></li>
+</ul>
 
 
 
