--- a/src/windows/leash/htmlhelp/html/Manage_Multiple_Principals.htm
+++ b/src/windows/leash/htmlhelp/html/Manage_Multiple_Principals.htm
@@ -43,7 +43,7 @@ All of your principals with tickets are listed in the main window. The default p
 
 
 
-<H2><a name="manage-multiple">Multiple Kerberos principals</a></H2>
+<H2><a name="manage-multiple">Manage Multiple Principals</a></H2>
 <table>
 <tr>
 <th id="th2">Enter and save principals</th>
@@ -66,7 +66,7 @@ If the Automatic Ticket Renewal option is selected, all renewable tickets for al
 <td>
 To choose which principal's tickets are used by default when you access a Kerberized service, select a principal in the main window by clicking it and then click the Make Default button. <a href="HTML/Make_Default.htm">Click for details</a></td>
 </tr>
-<th id="th2">Delete saved principals</th>
+<th id="th2">Clear saved principals</th>
 <td>
 If you have saved a principal that you will no longer use, and you do not want that principal to auto-complete or show in the saved principal list in the Get Ticket and Change Password windows, you can clear your principal history by clicking the Clear History button in the  Get Ticket window.  Note that MIT Kerberos will immediately clear <em>all</em> of your saved principals.  <a href="HTML/Forget_Principals.htm">Click for details</a></td></tr>
 </table>
