--- a/src/windows/leash/htmlhelp/html/Password_Tips.htm
+++ b/src/windows/leash/htmlhelp/html/Password_Tips.htm
@@ -18,16 +18,16 @@ A strong password:  </p>
 <li>Is at least 8 characters long (preferably longer)</li>
 <li>Doesn't include your name or other easily obtained personal information</li>
 <li>Uses a mix of lower case letters, uppercase letters, numbers, and symbols </li>
-<li>Is only used for one program (and is not, for example, the same as your email password)</li>
+<li>Is only used for one program </li>
 </ul>
 <H3>Password Advice and Examples</H3>
 <p>
-To create a strong password that is still easy to remember, try starting with a phrase or sentence. Then play around with symbols, shorthands, and misspellings to make it more secure. For example:</p>
+To create a strong password that is still easy to remember, try starting with a phrase or sentence. Then play around with symbols, shorthands, and misspellings to make it more secure.  Remember that you can have spaces in your password. Some examples:</p>
 <ul>
 <li> "Beans and rice are my favorite foods" can become <tt>Beans&ricearemyFavoriteFoods!</tt>, <tt>Rbeans&ricemyfavoritefoods?</tt> or <tt>BeansNRiceRFavz!</tt></li>
 <li>"I can't wait 2 go to Spain" can become <tt>Ican'twait2go2Spain!</tt></li>
 <li>"Meet me at the store" can become <tt>mEEtme@zeStore</tt></li>
-<li>"Cat or dog?" can become <tt>?KatsRd0gs</tt></li>
+<li>"Cat or dog?" can become <tt>?KatsRd0gs</tt> or you can leave it as is. </li>
 </ul>
 <H3>What Makes a Bad Password</H3>
 <p>
