--- a/src/windows/leash/htmlhelp/html/Report_Bugs.htm
+++ b/src/windows/leash/htmlhelp/html/Report_Bugs.htm
@@ -8,7 +8,7 @@
 <BODY>
 <H1>Report Bugs or Request Assistance</h1>
 <H2>Bug Reports</H2>
-<p> We strive to provide a robust product. If you find bugs in Keberos for Windows, we want to know about them. Please email bug reports to <span class="typed">  kfw-bugs@MIT.EDU</span>. Please provide as much detail as you can so that we can replicate the issue. </p>
+<p> We strive to provide a robust product. If you find bugs in Kerberos for Windows, we want to know about them. Please email bug reports to <span class="typed">  kfw-bugs@MIT.EDU</span>. Please provide as much detail as you can so that we can replicate the issue. </p>
 
 <H2>Requesting Assistance/Joining Discussion</H2>
 <p>
