--- a/src/windows/leash/htmlhelp/html/Principals.htm
+++ b/src/windows/leash/htmlhelp/html/Principals.htm
@@ -37,7 +37,7 @@ The main window shows your principal, along with information about tickets issue
 Some users have multiple principals. For example, administrators often have one principal with standard access and an administrative principal with administrative access. Also, some Kerberos installations require multiple principals to access multiple realms.
 </p>
 <p>
-If you have multiple principals, you might want to read the help pages <a href="HTML/Manage_Multiple_Principals.htm"> Manage multiple principals</a> and <a href="HTML/Make_Default.htm">Set default principal</a>.
+If you have multiple principals, you might want to read the help pages <a href="HTML/Manage_Multiple_Principals.htm"> Manage multiple principals</a> and <a href="HTML/Make_Default.htm">Make  default principal</a>.
 </p>
 <p>
 <a href=#top>Back to top</a></p>
@@ -51,7 +51,7 @@ When you try to use a Kerberized application, the application attempts to authen
 When applications make a generic request, Kerberos does not know which of your principals is being authenticated and checks the default principal for tickets. If the default principal is not the correct one, the application will usually simply fail to work with no warning or notice. 
 </p>
 <p>
-To set your default principal, select a principal in the main window and then click the Make Default button. <a href="HTML/Make_Default.htm">Make Default help</a>
+To set your default principal, select a principal in the main window and then click the Make Default button. <a href="HTML/Make_Default.htm">Make Default Principal help</a>
 </p>
 <p>
 <a href=#top>Back to top</a></p>
